k8s/termix/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: termix
  namespace: termix
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: termix
  template:
    metadata:
      labels:
        app: termix
    spec:
      containers:
        - name: termix
          image: ghcr.io/lukegus/termix:2.9.2
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /app/data
              
        - name: guacd
          image: guacamole/guacd:1.6.0
          volumeMounts:
            - name: data
              mountPath: /termix-data

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: termix-data
