k8s/termix/service.yml
apiVersion: v1
kind: Service
metadata:
  name: termix
  namespace: termix
spec:
  selector:
    app: termix
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
